--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -223,6 +223,10 @@
             </div>
         </div>
 
+        <div class="estate-dundee wrap">
+            <h2>Dundee Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
