--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -227,6 +227,10 @@
             <h2>Dundee Properties</h2>
         </div>
 
+        <div class="estate-aberdeen wrap">
+            <h2>Aberdeen Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
