--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -134,6 +134,18 @@
             </div>
         </div>
 
+        <div class="estate-aarhus wrap">
+            <h2>Aarhus Properties</h2>
+        </div>
+
+        <div class="estate-aalborg wrap">
+            <h2>Aalborg Properties</h2>
+        </div>
+
+        <div class="estate-odense wrap">
+            <h2>Odense Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
