--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -66,7 +66,7 @@
             </div>
             <div class="property-bucharest-house">
                 <div class="estate-photo">
-                    <img src="../photos/james-day-jUyNP55873k-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                    <img src="../photos/house-eight.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
