--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -134,6 +134,18 @@
             </div>
         </div>
 
+        <div class="estate-brasov wrap">
+            <h2>Brasov Properties</h2>
+        </div>
+
+        <div class="estate-sibiu wrap">
+            <h2>Sibiu Properties</h2>
+        </div>
+
+        <div class="estate-constanta wrap">
+            <h2>Constanta Properites</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
