--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -223,6 +223,14 @@
             </div>
         </div>
 
+        <div class="estate-maastricht wrap">
+            <h2>Maastricht Properties</h2>
+        </div>
+
+        <div class="estate-breda wrap">
+            <h2>Breda Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
