--- a/buy-files/sweden.html
+++ b/buy-files/sweden.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/property-cards.css">
     <meta charset="UTF-8">
     <meta name="Sweden Locations Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -32,6 +33,17 @@
 
     <!--Content-->
     <main class="page-body">
+
+        <div id="page-location-info-box">
+            <div id="property-box-text">
+                <h1>Scotland Locations</h1>
+                <p>Below You Will Find All Our Properties We Are Currently Selling In Scotland</p>
+                <p>Keep In Mind That The List Can Change Quickly, Thou To Our Company Working Around The Clock</p>
+                <p>With Selling Houses, Buying Houses And Constructing Houses</p>
+                <p>If You Find A House Which Caught Your Eye, Be Fast And Reach Out To Us</p>
+                <p>To Either Book A Tour Of The House Or Buy It</p>
+            </div>
+        </div>
     </main>
 
    <!--Footer-->
