--- a/buy-files/sweden.html
+++ b/buy-files/sweden.html
@@ -44,9 +44,6 @@
                 <p>To Either Book A Tour Of The House Or Buy It</p>
             </div>
         </div>
-.estate-stockholm, .estate-malmo, .estate-gothenburg
-
-.estate-stockholm h2, .estate-malmo h2, .estate-gothenburg h2
 
 
         <div class="estate-stockholm wrap">
@@ -59,6 +56,10 @@
 
         <div class="estate-gothenburg wrap">
             <h2>Gothenburg Properties</h2>
+        </div>
+
+        <div class="estate-orebro wrap">
+            <h2>Orebro Properties</h2>
         </div>
 
         <div class="flex-three-info-boxes wrap">
