--- a/buy-files/latvia.html
+++ b/buy-files/latvia.html
@@ -49,6 +49,18 @@
             <h2>Riga Properties</h2>
         </div>
 
+        <div class="estate-ludza wrap">
+            <h2>Ludza Properties</h2>
+        </div>
+
+        <div class="estate-jelgava wrap">
+            <h2>Jelgava Properties</h2>
+        </div>
+
+        <div class="estate-jurmala wrap">
+            <h2>Jurmala Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
