--- a/buy-files/latvia.html
+++ b/buy-files/latvia.html
@@ -36,8 +36,8 @@
 
         <div id="page-location-info-box">
             <div id="property-box-text">
-                <h1>Finland Locations</h1>
-                <p>Below You Will Find All Our Properties We Are Currently Selling In Finland</p>
+                <h1>Latvia Locations</h1>
+                <p>Below You Will Find All Our Properties We Are Currently Selling In Latvia</p>
                 <p>Keep In Mind That The List Can Change Quickly, Thou To Our Company Working Around The Clock</p>
                 <p>With Selling Houses, Buying Houses And Constructing Houses</p>
                 <p>If You Find A House Which Caught Your Eye, Be Fast And Reach Out To Us</p>
