--- a/buy-files/england.html
+++ b/buy-files/england.html
@@ -36,13 +36,24 @@
 
         <div id="page-location-info-box">
             <div id="property-box-text">
-                <h1>Finland Locations</h1>
-                <p>Below You Will Find All Our Properties We Are Currently Selling In Finland</p>
+                <h1>England Locations</h1>
+                <p>Below You Will Find All Our Properties We Are Currently Selling In England</p>
                 <p>Keep In Mind That The List Can Change Quickly, Thou To Our Company Working Around The Clock</p>
                 <p>With Selling Houses, Buying Houses And Constructing Houses</p>
                 <p>If You Find A House Which Caught Your Eye, Be Fast And Reach Out To Us</p>
                 <p>To Either Book A Tour Of The House Or Buy It</p>
             </div>
+        </div>
+
+        <div class="estate-london wrap">
+            <h2>London Properties</h2>
+        </div>
+
+        <div class="estate-birmingham wrap">
+            <h2>Birmingham Properties</h2>
+        </div>
+        <div class="estate-bristol wrap">
+            <h2>Bristol Properties</h2>
         </div>
 
         <div class="flex-three-info-boxes wrap">
