--- a/buy-files/england.html
+++ b/buy-files/england.html
@@ -52,8 +52,13 @@
         <div class="estate-birmingham wrap">
             <h2>Birmingham Properties</h2>
         </div>
+
         <div class="estate-bristol wrap">
             <h2>Bristol Properties</h2>
+        </div>
+
+        <div class="estate-derby wrap">
+            <h2>Derby Properties</h2>
         </div>
 
         <div class="flex-three-info-boxes wrap">
