--- a/buy-files/germany.html
+++ b/buy-files/germany.html
@@ -45,6 +45,14 @@
             </div>
         </div>
 
+        <div class="estate-berlin wrap">
+            <h2>Berlin Properties</h2>
+        </div>
+
+        <div class="estate-munich wrap">
+            <h2>Munich Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
