--- a/buy-files/germany.html
+++ b/buy-files/germany.html
@@ -53,6 +53,14 @@
             <h2>Munich Properties</h2>
         </div>
 
+        <div class="estate-hamburg wrap">
+            <h2>Hamburg Properties</h2>
+        </div>
+
+        <div class="estate-frankfurt wrap">
+            <h2>Frankfurt Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
