--- a/buy-files/france.html
+++ b/buy-files/france.html
@@ -45,6 +45,22 @@
             </div>
         </div>
 
+        <div class="estate-paris wrap">
+            <h2>Paris Properties</h2>
+        </div>
+
+        <div class="estate-marseille wrap">
+            <h2>Marseille Properties</h2>
+        </div>
+
+        <div class="estate-bordeaux wrap">
+            <h2>Bordeaux Properties</h2>
+        </div>
+
+        <div class="estate-nice wrap">
+            <h2>Nice Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
