--- a/buy-files/greece.html
+++ b/buy-files/greece.html
@@ -45,6 +45,22 @@
             </div>
         </div>
 
+        <div class="estate-athens wrap">
+            <h2>Athens Properties</h2>
+        </div>
+
+        <div class="estate-chania wrap">
+            <h2>Chania Properties</h2>
+        </div>
+
+        <div class="estate-patras wrap">
+            <h2>Patras Properties</h2>
+        </div>
+
+        <div class="estate-kavala wrap">
+            <h2>Kavala Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
