--- a/buy-files/bulgaria.html
+++ b/buy-files/bulgaria.html
@@ -57,6 +57,10 @@
             <h2>Plovdiv Properties</h2>
         </div>
 
+        <div class="estate-nessebar wrap">
+            <h2>Nessbar Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
