--- a/buy-files/slovenia.html
+++ b/buy-files/slovenia.html
@@ -57,6 +57,10 @@
             <h2>Piran Properties</h2>
         </div>
 
+        <div class="estate-kamnik wrap">
+            <h2>Kamnik Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
