--- a/buy-files/malta.html
+++ b/buy-files/malta.html
@@ -52,6 +52,14 @@
         <div class="estate-mdina wrap">
             <h2>Mdina Properties</h2>
         </div>
+
+        <div class="estate-victoria wrap">
+            <h2>Victoria Properties</h2>
+        </div>
+
+        <div class="estate-senglea wrap">
+            <h2>Senglea Properties</h2>
+        </div>
         
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
