--- a/buy-files/belgium.html
+++ b/buy-files/belgium.html
@@ -49,6 +49,18 @@
             <h2>Brussels Properties</h2>
         </div>
 
+        <div class="estate-bruges wrap">
+            <h2>Bruges Properties</h2>
+        </div>
+
+        <div class="estate-antwerp wrap">
+            <h2>Antwerp Properties</h2>
+        </div>
+
+        <div class="estate-ghent wrap">
+            <h2>Ghent Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
