--- a/buy-files/estonia.html
+++ b/buy-files/estonia.html
@@ -56,6 +56,10 @@
             <h2>Rakvere Properties</h2>
         </div>
 
+        <div class="estate-narva wrap">
+            <h2>Narva Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
