--- a/buy-files/slovakia.html
+++ b/buy-files/slovakia.html
@@ -49,6 +49,18 @@
             <h2>Bratislava Properties</h2>
         </div>
 
+        <div class="estate-nitra wrap">
+            <h2>Nitra Properties</h2>
+        </div>
+
+        <div class="estate-kosice wrap">
+            <h2>Košice Properties</h2>
+        </div>
+
+        <div class="estate-banska wrap">
+            <h2>Banská Bystrica Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
