--- a/buy-files/slovakia.html
+++ b/buy-files/slovakia.html
@@ -89,6 +89,7 @@
                     <p>Contact Us On Email At Any Time Or Call Us In Our Openning Hours</p>
                 </div>
             </div>
+        </div>
     </main>
 
    <!--Footer-->
