--- a/buy-files/spain.html
+++ b/buy-files/spain.html
@@ -45,6 +45,22 @@
             </div>
         </div>
 
+        <div class="estate-barcelona wrap">
+            <h2>Barcelona Properties</h2>
+        </div>
+
+        <div class="estate-madrid wrap">
+            <h2>Madrid Properties</h2>
+        </div>
+
+        <div class="estate-valencia wrap">
+            <h2>Valencia Properties</h2>
+        </div>
+        
+        <div class="estate-san-sebastian wrap">
+            <h2>Donostia-San Sebastian Properties</h2>
+        </div>
+
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
