--- a/buy-files/jordon.html
+++ b/buy-files/jordon.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/property-cards.css">
     <meta charset="UTF-8">
     <meta name="Jordon Locations Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
