--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -191,6 +191,8 @@
             </div>
         </div>
 
+        <!--Done So Far-->
+
         <div class="end-of-box">
             <div class="text-box">
                 <p><b>Isn't Europe Quite Your Thing?</b></p>
