--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -225,6 +225,11 @@
 
         <div class="estate-dundee wrap">
             <h2>Dundee Properties</h2>
+            <div class="property-dundee">
+                <div class="estate-photo">
+                    <img src="../photos/house-three.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+            </div>
         </div>
 
         <div class="estate-aberdeen wrap">
