--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -229,6 +229,18 @@
                 <div class="estate-photo">
                     <img src="../photos/house-three.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, 3 Cars Garage, Library, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.390.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
             </div>
         </div>
 
