--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -242,6 +242,17 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-dundee-house">
+                <div class="estate-photo">
+                    <img src="../photos/house5.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, 3 Cars Garage, Library, Basement</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-aberdeen wrap">
