--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -251,6 +251,12 @@
                         <h1>221 Baker Street</h1>
                         <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, 3 Cars Garage, Library, Basement</p>
                     </div>
+                    <div class="estate-price">
+                        <p><b>$5.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
