--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -259,6 +259,23 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-dundee-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/house2.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Roayl Archtecture, 5 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, Attic, Basement, Garage, Gated Property</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$10.987.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-aberdeen wrap">
