--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -293,6 +293,23 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-last-dunde">
+                <div class="estate-photo">
+                    <img src="../photos/italian-villa.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Roayl Archtecture, 8 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, Attic, Basement, Garage, Gated Property</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$15.987.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-aberdeen wrap">
