--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -314,6 +314,23 @@
 
         <div class="estate-aberdeen wrap">
             <h2>Aberdeen Properties</h2>
+            <div class="property-aberdeen">
+                <div class="estate-photo">
+                    <img src="../photos/house-eight.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, 3 Cars Garage, Library, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$9.990.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="flex-three-info-boxes wrap">
