--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -331,6 +331,28 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-aberdeen">
+                <div class="estate-photo">
+                    <img src="../photos/villa.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, 3 Cars Garage, Library, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$12.976.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proerpty-aberdeen-house">
+                <div class="estate-photo">
+                    <img src="../photos/fifteen.webp"
+                </div>
+            </div>
         </div>
 
         <div class="flex-three-info-boxes wrap">
