--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -350,7 +350,19 @@
             </div>
             <div class="proerpty-aberdeen-house">
                 <div class="estate-photo">
-                    <img src="../photos/fifteen.webp"
+                    <img src="../photos/fifteen.webp" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Roayl Archtecture, 8 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, Attic, Basement, Garage, Gated Property</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$13.120.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Vook A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
