--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -382,6 +382,11 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-aberdeen-last">
+                <div class="estate-photo">
+                    <img src="../photos/alan-j-hendry-zVf-R-r3szw-unsplash.jpg"
+                </div>
+            </div>
         </div>
 
         <div class="flex-three-info-boxes wrap">
