--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -361,7 +361,7 @@
                         <p><b>$13.120.000</b></p>
                     </div>
                     <div id="estate-button">
-                        <a href="../html-files/book-tour-of-house.html">Vook A Tour</a>
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
                 </div>
             </div>
@@ -384,7 +384,19 @@
             </div>
             <div class="proerpty-aberdeen-last">
                 <div class="estate-photo">
-                    <img src="../photos/alan-j-hendry-zVf-R-r3szw-unsplash.jpg"
+                    <img src="../photos/alan-j-hendry-zVf-R-r3szw-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, 3 Cars Garage, Library, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$10.250.000</b>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
