--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="estate-copenhagen wrap">
-            <h2>Coprnhagen Properties</h2>
+            <h2>Copenhagen Properties</h2>
             <div class="property-copenhagen">
                 <div class="estate-photo">
                     <img src="../photos/fabian-wiktor-MBKFuFqlMwo-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
@@ -136,6 +136,40 @@
 
         <div class="estate-aarhus wrap">
             <h2>Aarhus Properties</h2>
+            <div class="property-aarhus">
+                <div class="estate-photo">
+                    <img src="../photos/frames-for-your-heart-_KP6mk2Iz8k-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Attic, Bay Acess, Office Room, BBQ Area, 3 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proerpty-aarhus">
+                <div class="estate-photo">
+                    <img src="../photos/aubrey-odom-ITzfgP77DTg-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Attic, Bay Acess, Office Room, BBQ Area, 3 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$12.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-aalborg wrap">
