--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -225,6 +225,23 @@
 
         <div class="estate-aalborg wrap">
             <h2>Aalborg Properties</h2>
+            <div class="property-aalborg">
+                <div class="estate-photo">
+                    <img src="../photos/frames-for-your-heart-jFNQdzwk6U8-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Attic, Bay Acess, Office Room, BBQ Area, 3 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$11.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-odense wrap">
