--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -259,6 +259,40 @@
                     </div>
                 </div>
             </div>
+            <div class="property-aalborg-house">
+                <div class="estate-photo">
+                    <img src="../photos/590-S-Lake-Shore-Dr-Lake-Geneva-2021-04-12-realtordotcom.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Attic, Bay Acess, Office Room, BBQ Area, 3 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-aalborg-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Attic, Bay Acess, Office Room, BBQ Area, 3 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$9.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-odense wrap">
