--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -314,6 +314,23 @@
 
         <div class="estate-odense wrap">
             <h2>Odense Properties</h2>
+            <div class="property-odense">
+                <div class="estate-photo">
+                    <img src="../photos/nicola-nuttall-ks8cKjLWYK8-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Attic, Bay Acess, Office Room, BBQ Area, 3 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="flex-three-info-boxes wrap">
