--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -136,6 +136,23 @@
 
         <div class="estate-brasov wrap">
             <h2>Brasov Properties</h2>
+            <div class="property-brasov">
+                <div class="estate-photo">
+                    <img src="../photos/walter-sturn--_folCc8Q8k-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>13 Bedrooms, 15 Bathrooms, Living Room, Kitchen, Dinning Room, Basement, Attic, 2 Office Rooms, Library, Wine Celler, 6 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$25.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-sibiu wrap">
