--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -225,6 +225,23 @@
 
         <div class="estate-sibiu wrap">
             <h2>Sibiu Properties</h2>
+            <div class="property-sibiu">
+                <div class="estate-photo">
+                    <img src="../photos/49de0729a4762b157f577aca962c0d31-full.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>13 Bedrooms, 15 Bathrooms, Living Room, Kitchen, Dinning Room, Basement, Attic, 2 Office Rooms, Library, Wine Celler, 6 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$25.599.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-constanta wrap">
