--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -314,6 +314,74 @@
 
         <div class="estate-constanta wrap">
             <h2>Constanta Properites</h2>
+            <div class="property-constanta">
+                <div class="estate-photo">
+                    <img src="../photos/house-nine.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>13 Bedrooms, 15 Bathrooms, Living Room, Kitchen, Dinning Room, Basement, Attic, 2 Office Rooms, Library, Wine Celler, 6 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$10.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-constanta-house">
+                <div class="estate-photo">
+                    <img src="../photos/house-house.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>13 Bedrooms, 15 Bathrooms, Living Room, Kitchen, Dinning Room, Basement, Attic, 2 Office Rooms, Library, Wine Celler, 6 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$50.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-constanta-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/house-seven.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>13 Bedrooms, 15 Bathrooms, Living Room, Kitchen, Dinning Room, Basement, Attic, 2 Office Rooms, Library, Wine Celler, 6 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$8.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-constanta-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/house4.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>13 Bedrooms, 15 Bathrooms, Living Room, Kitchen, Dinning Room, Basement, Attic, 2 Office Rooms, Library, Wine Celler, 6 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$17.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="flex-three-info-boxes wrap">
