--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -382,6 +382,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-constanta-last">
+                <div class="estate-photo">
+                    <img src="../photos/house.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>13 Bedrooms, 15 Bathrooms, Living Room, Kitchen, Dinning Room, Basement, Attic, 2 Office Rooms, Library, Wine Celler, 6 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$12.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="flex-three-info-boxes wrap">
