--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -293,6 +293,23 @@
                     </div>
                 </div>
             </div>
+            <div class="proerpty-masstricht-last">
+                <div class="estate-photo">
+                    <img src="../photos/italy-house-for-sell.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$55.599.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-breda wrap">
